# auth-service/internal/controller/http/v1/request/verify_email.go
@@ -1,0 +1,6 @@
+package request
+
+type VerifyEmail struct {
+	Email string `json:"email" validate:"required,email"`
+	Code  string `json:"code" validate:"required,len=6"`
+}
